@@ -75,3 +75,5 @@ Marc Van Giel                   marc.vangiel@xplore.be
 Walter Tuvell	                  Tuvell_Walter@emc.com
 
 Antonio Manuel Muñiz Martín     http://amunizmartin.wordpress.com
+
+Hitoshi Amano                   seijro@gmail.com
